# VersatiList

./: .gitignore  Cargo.toml  README.md  VersatiList.html  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
main/: build.gradle
main/src/ios/: Info.plist
module-scala/: build.gradle
module-scala/src/main/resources/org/edla/versatilist/: RecetteTable.fxml  recipes.data
module-scala/src/main/scala/org/edla/: VersatiList.scala
module-scala/src/main/scala/org/edla/versatilist/: Recette.scala  RecetteTableController.scala
src/: cli.rs  gui.rs  lib.rs  main.rs
src/data/: recipes.json
tools/: build.sbt
tools/src/main/scala/org/edla/versatilist/: ComplexImporter.scala  Recette.scala  SimpleImporter.scala
tools/src/main/scala/org/edla/versatilist/labo/: Experiments.scala
