[package]
name = "versatilist"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
description = "VersatiList is a cross platform dynamic list filter"
edition = "2018"

[dependencies]
iced = { version = "0.3.0", features = ["glow", "debug"] }
iced_web = "0.4.0"
structopt = "0.3.21"
serde_json = "1.0.64"
serde_derive = "1.0.125"
serde = "1.0.125"