[package]
name = "versatilist"
version = "0.1.0"
authors = ["Olivier ROLAND <newca12@users.noreply.github.com>"]
description = "A cross platform dynamic list filter"
homepage = "https://github.com/newca12/VersatiList"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
iced = { version = "0.3.0", features = ["glow", "debug"] }
iced_web = "0.4.0"
structopt = "0.3.21"
serde_json = "1.0.64"
serde_derive = "1.0.125"
serde = "1.0.125"